--- a/Liste.Web/src/index.css
+++ b/Liste.Web/src/index.css
@@ -63,12 +63,11 @@ button:hover {
 #sectionContainer {
     position: absolute;
     overflow: hidden;
-    width: calc(100% - 15rem);
+    width: 100%;
     height: 100%;
     
     top: 0;
     right: 0;
-    margin-left: 15rem;
 
     display: flex;
     flex-direction: column;
